# facebook-video-bot

./: .env  Cargo.toml  go.mod  index.js  main.go  main.py  main.rs  package.json  requirements.txt  vercel.json
api/: bot.js
src/: main.rs
